Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-17130

Clang: Parse error with 64 Bit MSVC Kit - typedef redefinition with different types ('unsigned long long' and 'unsigned int')

XMLWordPrintable

      1. Set up a MSVC2013/2015 Kit in a 64 Bit version
      2. Create a project with such a Kit
      3. Create and open a file containing #include <cctype>

      The InfoBar will be displayed (or the icon if you minimized before) with this error:

      crtdefs.h:494:29: error: typedef redefinition with different types ('unsigned long long' and 'unsigned int')
      

      Context around the error location is:

      #ifndef _SIZE_T_DEFINED
      #ifdef _WIN64
      typedef unsigned __int64    size_t; // LINE 494
      #else  /* _WIN64 */
      typedef _W64 unsigned int   size_t;
      #endif  /* _WIN64 */
      #define _SIZE_T_DEFINED
      #endif  /* _SIZE_T_DEFINED */
      

      No error message is generated for the 32-Bit version of the Kits.

        For Gerrit Dashboard: QTCREATORBUG-17130
        # Subject Branch Project Status CR V

            kosjar Nikolai Kosjar
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes