src/plugins/clangrefactoring/refactoringcompileroptionsbuilder.cpp
@@ -124,6 +124,7 @@ Utils::SmallStringVector RefactoringCompilerOptionsBuilder::build(CppTools::Proj
 
     RefactoringCompilerOptionsBuilder optionsBuilder(projectPart);
 
+    optionsBuilder.addWordWidth();
     optionsBuilder.addTargetTriple();
     optionsBuilder.addLanguageOption(fileKind);
     optionsBuilder.addOptionsForLanguage(/*checkForBorlandExtensions*/ true);
